src/components/CocktailSearch/_CocktailSearch.scss
.form {
   display: flex;
   align-items: center;
   flex-direction: column;

   padding: 30px;
   border-radius: 0px;
   gap: 20px;
   &__label {
      font-size: 25px;
      display: block;
      text-align: center;
   }
   &__searchBar {
      text-align: center;
      height: 40px;
      color: #fff;
      font-family: 'Unifont', sans-serif;
      background-color: black;
      font-size: 25px;
   }
   &__btn {
      display: inline-block;
      background: white;
      color: black;
      width: 70px;
      height: 70px;
      border-radius: 2px;
      border: 0;
      line-height: 70px;
      font-family: 'Unifont', sans-serif;
      font-weight: 900;
      font-size: 1.5em;
      box-shadow: 2px 2px 0 #ea2027, -2px -2px 0 #0c2461;
      transition: box-shadow 0.3s;
      &:hover {
         box-shadow: 12px 12px 6px #ea2020, -12px -12px 6px #0c2461;
         transition: box-shadow 0.5s;
         zoom: 1.1;
      }
   }
}
.cocktails {
   display: flex;
   flex-direction: column;
   gap: 20px;
}
.cocktail {
   background-color: #2d3436;
   border-radius: 5px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
   text-align: center;
   box-shadow: 5px 5px 15px 5px #000000;
   width: 300px;
   height: 400px;
}
.cocktail-cards {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   align-content: center;
   padding: 40px;
   justify-content: center;
   flex-direction: row;
}
.cocktail-empty {
   display: flex;
   font-family: 'Nabla', cursive;
   font-size: 100px;
   text-align: center;
   justify-content: center;
   // background-image: url();
}
.cocktail-empty > h1 {
   margin-top: -192px;

   // background-image: url();
}
.cocktail-card {
   display: flex;
   flex-direction: column;
   background-color: #2d3436;
   border-radius: 15px;
   padding: 20px;
   justify-content: space-around;
   width: 300px;
   align-items: center;
   box-sizing: border-box;
   gap: 10px;
   text-align: center;
   &:hover {
      transition: box-shadow 0.2s ease-out;
      box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
         0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
      .cocktail-card__name {
         letter-spacing: 2.5px;
         font-size: 2.5em;
         color: #ffffff;
      }
      .cocktail-card__ingredients {
         font-size: 1.3em;
         color: #ffffff;
      }
      .cocktail-card__method {
         font-size: 1.2em;
         color: #a6a5e6;
         font-style: italic;
      }
   }
   @media screen and (max-width: 575px) {
      font-size: 75%;
   }
   &__name {
      font-size: 1.8rem;
      margin: 0;
   }
   &__ingredients {
      display: flex;
      flex-direction: column;
   }
}

